updated project structure, updated .net core version, add initial tasks 1,2

--- a/AspNetCoreMentoring/AspNetCoreMentoring.DI/AspNetCoreMentoring.DI.csproj
+++ b/AspNetCoreMentoring/AspNetCoreMentoring.DI/AspNetCoreMentoring.DI.csproj
@@ -5,11 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Contracts\" />
-    <Folder Include="Exceptions\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\AspNetCoreMentoring.Application\AspNetCoreMentoring.Core.csproj" />
     <ProjectReference Include="..\AspNetCoreMentoring.Persistance\AspNetCoreMentoring.Infrastructure.csproj" />
   </ItemGroup>
 
