--- a/AspNetCoreMentoring/AspNetCoreMentoring.Persistance/AspNetCoreMentoring.Infrastructure.csproj
+++ b/AspNetCoreMentoring/AspNetCoreMentoring.Persistance/AspNetCoreMentoring.Infrastructure.csproj
@@ -1,8 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="IProductsRepository - Copy.cs" />
+    <Compile Remove="IProductsRepository.cs" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.3" />
@@ -10,9 +15,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="DataSet1.xsd">
-      <Generator>MSDataSetGenerator</Generator>
-    </None>
+    <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.0" />
   </ItemGroup>
-
 </Project>
