--- a/AspNetCoreMentoring/AspNetCoreMentoring.UI/appsettings.json
+++ b/AspNetCoreMentoring/AspNetCoreMentoring.UI/appsettings.json
@@ -4,5 +4,10 @@
     "LogLevel": {
       "Default": "Warning"
     }
-  }
+  },
+  "ConnectionStrings": {
+    "NorthwindConnection": "Server=.;Database=Northwind;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "MaxProductCount": 20
+
 }
