--- a/AspNetCoreMentoring/AspNetCoreMentoring.UI/package.json
+++ b/AspNetCoreMentoring/AspNetCoreMentoring.UI/package.json
@@ -5,8 +5,10 @@
   "devDependencies": {},
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "globalize": "^1.4.0",
     "jquery": "^3.3.1",
     "jquery-validation": "^1.18.0",
+    "jquery-validation-globalize": "^0.1.1",
     "jquery-validation-unobtrusive": "^3.2.10"
   }
 }
