--- a/AspNetCoreMentoring/AspNetCoreMentoring.UI/appsettings.json
+++ b/AspNetCoreMentoring/AspNetCoreMentoring.UI/appsettings.json
@@ -18,9 +18,9 @@
       }
     ]
   },
-  "ConnectionStrings": {
-    "NorthwindConnection": "Server=.;Database=Northwind;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
+  //"ConnectionStrings": {
+  //  "NorthwindConnection": "Server=.;Database=Northwind;Trusted_Connection=True;MultipleActiveResultSets=true"
+  //},
   "MaxProductCount": 0
 
 }
