update swagger documentation, create proxy client using nswag tool, extract contracts to the seperate project

--- a/AspNetCoreMentoring/AspNetCoreMentoring.API/AspNetCoreMentoring.API.csproj
+++ b/AspNetCoreMentoring/AspNetCoreMentoring.API/AspNetCoreMentoring.API.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AspNetCoreMentoring.API.Contracts\AspNetCoreMentoring.API.Contracts.csproj" />
     <ProjectReference Include="..\AspNetCoreMentoring.DI\AspNetCoreMentoring.DI.csproj" />
   </ItemGroup>
 
