--- a/AspNetCoreMentoring/AspNetCoreMentoring.Tests/AspNetCoreMentoring.Tests.csproj
+++ b/AspNetCoreMentoring/AspNetCoreMentoring.Tests/AspNetCoreMentoring.Tests.csproj
@@ -8,13 +8,18 @@
 
   <ItemGroup>
     <PackageReference Include="AutoFixture" Version="4.5.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="2.1.3" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
     <PackageReference Include="Moq" Version="4.10.0" />
-    <PackageReference Include="xunit" Version="2.3.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
+    <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AspNetCoreMentoring.API\AspNetCoreMentoring.API.csproj" />
     <ProjectReference Include="..\AspNetCoreMentoring.UI\AspNetCoreMentoring.UI.csproj" />
   </ItemGroup>
 
