task 5 implement asp net identity, add integration with azure ad aas external identity provider

--- a/AspNetCoreMentoring/AspNetCoreMentoring.UI/AspNetCoreMentoring.UI.csproj
+++ b/AspNetCoreMentoring/AspNetCoreMentoring.UI/AspNetCoreMentoring.UI.csproj
@@ -6,8 +6,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="ApplicationDbContext.cs" />
+    <Compile Remove="ApplicationUser.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="5.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.AzureAD.UI" Version="2.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.1.6" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.5" />
   </ItemGroup>
 
@@ -175,6 +182,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Areas\Identity\Services\" />
     <Folder Include="wwwroot\CachedImages\" />
   </ItemGroup>
 
