--- a/AspNetCoreMentoring/AspNetCoreMentoring.UI/appsettings.json
+++ b/AspNetCoreMentoring/AspNetCoreMentoring.UI/appsettings.json
@@ -1,4 +1,11 @@
-﻿{
+{
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "Domain": "EPAM.onmicrosoft.com",
+    "TenantId": "b41b72d0-4e9f-4c26-8a69-f949f367c91d",
+    "ClientId": "8b9a02b3-f933-4808-ad86-b4d4b7540533",
+    "CallbackPath": "/signin-oidc"
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Debug",
@@ -8,7 +15,9 @@
       }
     },
     "WriteTo": [
-      { "Name": "Console" },
+      {
+        "Name": "Console"
+      },
       {
         "Name": "File",
         "Args": {
@@ -18,5 +27,8 @@
       }
     ]
   },
-  "MaxProductCount": 10
+  "MaxProductCount": 10,
+  "ConnectionStrings": {
+    "AspNetUsersDb": "Server=.;Database=AspNetUsersDb;Integrated Security=true; "
+  }
 }
