--- a/AspNetCoreMentoring/AspNetCoreMentoring.UI/appsettings.json
+++ b/AspNetCoreMentoring/AspNetCoreMentoring.UI/appsettings.json
@@ -28,7 +28,6 @@
     ]
   },
   "MaxProductCount": 10,
-  "ConnectionStrings": {
-    "AspNetUsersDb": "Server=.;Database=AspNetUsersDb;Integrated Security=true; "
-  }
+  "SendGridSenderEmail": "noreply@contoso.com",
+  "SendGridSenderName": "Mega Super Admin"
 }
