--- a/AspNetCoreMentoring/AspNetCoreMentoring.UI/package.json
+++ b/AspNetCoreMentoring/AspNetCoreMentoring.UI/package.json
@@ -2,7 +2,15 @@
   "version": "1.0.0",
   "name": "asp.net",
   "private": true,
-  "devDependencies": {},
+  "devDependencies": {
+    "del": "^3.0.0",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-cssmin": "^0.2.0",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-uglify": "^3.0.1",
+    "merge-stream": "^1.0.1"
+  },
   "dependencies": {
     "bootstrap": "^4.1.3",
     "globalize": "^1.4.0",
